add role and expose reason field to Instructor Dashboard Manual Enrollment WL-1473

--- a/lms/static/sass/course/instructor/_instructor_2.scss
+++ b/lms/static/sass/course/instructor/_instructor_2.scss
@@ -615,6 +615,13 @@
       width: 90%;
     }
 
+    .role {
+      margin: 20px 0;
+      select {
+        margin-left: 15px;
+      }
+    }
+
     input {
       margin-right: ($baseline/4);
     }
